refactor: cosmetic fixes